# hirop_ros

asr_bridge/: CMakeLists.txt  package.xml
asr_bridge/src/: main.cpp
dm_bridge/: CMakeLists.txt  package.xml
dm_bridge/src/: main.cpp  test.cpp
gripper_bridge/: CMakeLists.txt  package.xml
gripper_bridge-build/: CMakeCache.txt
gripper_bridge-build/catkin_generated/: generate_cached_setup.py  setup_cached.sh
gripper_bridge-build/catkin_generated/installspace/: _setup_util.py
gripper_bridge-build/devel/: .catkin  .rosinstall  setup.sh
gripper_bridge/config/: ActionConfig.yaml  GripperConfig.yaml
gripper_bridge/include/: ros_gripper.h
gripper_bridge/launch/: gripper_bridge.launch  gripper_bridge_dual.launch
gripper_bridge/scripts/: airpowere_action.py  inspire_action.py  inspire_hand.py  robotIO_action.py  serial_action.py
gripper_bridge/src/: main.cpp  ros_gripper.cpp
hirop_msgs/: CMakeLists.txt  package.xml
hirop_msgs/msg/: GeneralPos.msg  ObjectArray.msg  ObjectInfo.msg
hirop_msgs/srv/: GetData.srv  MoveToName.srv  MoveToPos.srv  Pick.srv  PickPlaceStop.srv  Place.srv  RemoveObject.srv  SaveData.srv  SavePCL.srv  SetGenActuator.srv  SetGripper.srv  ShowObject.srv  StopGripper.srv  closeGripper.srv  connectGripper.srv  detection.srv  disConnectGripper.srv  getForce.srv  getOnRobotForce.srv  listActuator.srv  listDetector.srv  listGenerator.srv  listGripper.srv  listObject.srv  moveSeqIndex.srv  moveTo.srv  openGripper.srv  robotConn.srv  robotError.srv  setIODout.srv  setOnRobotForce.srv  setOpMode.srv  setVord.srv  setWorkFrame.srv  startJog.srv  train.srv
hsc3api_bridge/: CMakeLists.txt  HSC3API-ROS接口说明文档.md  README.md  package.xml
hsc3api_bridge/3rd/include/: CommApi.h  CommDef.h  ErrDef.h  Hsc3Def.h  MdlExtDef.h
hsc3api_bridge/3rd/include/proxy/: Entry.h  ProxyCollect.h  ProxyExt.h  ProxyIO.h  ProxyMotion.h  ProxySys.h  ProxyTrack.h  ProxyVar.h  ProxyVm.h
hsc3api_bridge/3rd/lib/HsApi/: libCommApi.so.1.0.0  libLogApi.so.1.0.0
hsc3api_bridge/include/: ros_hsc3api.h
hsc3api_bridge/launch/: hsc3api_bridge.launch
hsc3api_bridge/src/: main.cpp  ros_hsc3api.cpp
perception_bridge/: CMakeLists.txt  package.xml
perception_bridge/scripts/: perception_bridge.py
perception_bridge/srv/: Look.srv
pickplace_bridge/: CMakeLists.txt  package.xml  抓取模块接口说明文档.md
pickplace_bridge/config/: robotIOGenConfig.yaml  robotIOPPConfig.yaml  serialGenConfig.yaml  serialPPConfig.yaml
pickplace_bridge/include/: ros_pickplace.h
pickplace_bridge/launch/: pickplace_bridge.launch  robotIO_pickplace_bridge.launch  serial_pickplace_bridge.launch
pickplace_bridge/src/: main.cpp  ros_pickplace.cpp
rviz_map_tool/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_map_tool/src/: my_panel.ui  panel.cpp  panel.h  tool.cpp  tool.h
vision_bridge/: CMakeLists.txt  package.xml
vision_bridge/include/: ros_detctor.h  ros_trainer.h
vision_bridge/launch/: vision_bridge.launch  vision_bridge_ensenso.launch  vision_bridge_realsense2.launch  vision_bridge_yolo.launch  vision_bridge_yolo6d-realsense2.launch  vision_bridge_yolo6d.launch
vision_bridge/src/: main.cpp  ros_detector.cpp  ros_trainer.cpp
