<?xml version="1.0"?>
<package format="2">
  <name>asr_bridge</name>
  <version>0.0.1</version>
  <description>The asr_bridge package</description>

  <maintainer email="1125290220@qq.com">xkl</maintainer>

  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/asr_bridge</url> -->

  <author email="1125290220@qq.com">Kunlin Xu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hirop_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>hirop_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
