<?xml version="1.0"?>
<package format="2">
  <name>rviz_map_tool</name>
  <version>0.0.1</version>
  <description>The rviz_map_tool package</description>

  <maintainer email="1125290220@qq.com">Kunlin Xu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
