<?xml version="1.0"?>
<package format="2">
  <name>vision_bridge</name>
  <version>0.0.0</version>
  <description>The vision_bridge package</description>

  <maintainer email="1125290220@qq.com">eima</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>tf</build_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>tf</exec_depend>

  <build_depend>image_transport</build_depend>
  <build_export_depend>image_transport</build_export_depend>
  <exec_depend>image_transport</exec_depend>

  <build_depend>hirop_msgs</build_depend>
  <build_export_depend>hirop_msgs</build_export_depend>
  <exec_depend>hirop_msgs</exec_depend>

</package>
